--- a/foto.css
+++ b/foto.css
@@ -1,8 +1,12 @@
 body{
     background-color: aliceblue;
     height: 100vh;
+    align-items: center;
 }
 .gallery-container{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
     padding: 20px;
 }
 .category {
@@ -17,10 +21,18 @@ body{
     text-align: center;
     margin-bottom: 15px;
 }
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 .image-card {
     background-color: white;
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
 }
 .image-card img {
     width: 150px;
